<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:id="@+id/txt_1"/>

    <TextView android:text="@string/hello_world_2" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:id="@+id/txt_2"/>

    <TextView android:text="@string/hello_world_3" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:id="@+id/txt_3"/>

    <TextView android:text="@string/hello_world_4" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:id="@+id/txt_4"/>

    <TextView android:text="@string/hello_world_5" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:id="@+id/txt_5"/>

    <TextView android:text="@string/hello_world_6" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:id="@+id/txt_6"/>
</LinearLayout>
